--- a/etc/sysctl.d/10-max-user-watches.conf
+++ b/etc/sysctl.d/10-max-user-watches.conf
@@ -1,1 +1,4 @@
+# Increase number of inotify watches.
+# For minidlna, this needs to be higher than the number of subfolders in the media folder.
+
 fs.inotify.max_user_watches=65536
